--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   , "private": true
   , "dependencies": {
       "express": "^4.14.0"
-    , "jade": ">= 0.0.1"
+    , "moment": ">= 2.1.5"
+    , "mysql": ">= 2.11.1"
   }
 }
