NEW DEPENDENCIES ADDED - Add lgging functionality, updated package.json, and gitignmore.

--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
       "express": "^4.14.0"
     , "moment": ">= 2.1.5"
     , "mysql": ">= 2.11.1"
+    , "fs": ">= 0.0.1"
+    , "morgan": ">= 1.7.0"
   }
 }
